# MicroPython_TMP117

./: .gitignore  .pylintrc  .readthedocs.yaml  README.rst  examples.json  package.json  packages.json  pyproject.toml  requirements.txt  tmp117.py
.github/workflows/: release_pypi.yml
docs/: api.rst  conf.py  examples.rst  index.rst
docs/_static/: favicon.ico.license
examples/: tmp117_alert_mode.py  tmp117_averaging_measurements.py  tmp117_simpletest.py  tmp177_temperature_offset.py
micropython_tmp117/: i2c_helpers.py  tmp117.py
